14-Ingress-SSL-with-LetsEncrypt/kube-manifests/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  rules:
  - host: app1.kocaboy.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
  - host: app2.kocaboy.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-clusterip-service
            port:
              number: 80          
  tls:
  - hosts:
    - app1.kocaboy.online
    secretName: app1-kocaboy-secret           
  - hosts:
    - app2.kocaboy.online
    secretName: app2-kocaboy-secret
